--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -259,7 +259,7 @@ all:
                 sflow-tests-leaf1:
                 sflow-tests-leaf2:
               children:
-                sflow-tests-leaf-mlag:
+                SFLOW_TESTS_LEAF_MLAG:
                   hosts:
                     sflow-tests-leaf3:
                     sflow-tests-leaf4:
@@ -284,7 +284,7 @@ all:
                 FLOW_TRACKING_TESTS_LEAFS_2:
                   hosts:
                     flow-tracking-tests-leaf2:
-                flow-tracking-tests-leaf-mlag:
+                FLOW_TRACKING_TESTS_LEAF_MLAG:
                   children:
                     FLOW_TRACKING_TESTS_LEAFS_3:
                       hosts:
@@ -371,7 +371,7 @@ all:
                       hosts:
                         cv-pathfinder-pathfinder1:
                         cv-pathfinder-pathfinder2:
-                    CV-PATHFINDER_CUSTOM_CONTROL_PLANE_POLICY_TESTS:
+                    CV_PATHFINDER_CUSTOM_CONTROL_PLANE_POLICY_TESTS:
                       hosts:
                         # Edge-1 and Pathfinder-1 override control plane policy but not app profile name
                         cv-pathfinder-custom-control-plane-policy-edge-1:
