--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf3.cfg
@@ -208,7 +208,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.254.11.0/27 eq 32
 !
 mlag configuration
-   domain-id sflow-tests-leaf-mlag
+   domain-id SFLOW_TESTS_LEAF_MLAG
    local-interface Vlan4094
    peer-address 10.254.1.73
    peer-link Port-Channel11
