--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -53,6 +53,14 @@ router_bgp:
         enabled: true
         default: 100G
       ttl_maximum_hops: 1
+      missing_policy:
+        direction_in:
+          action: deny
+          include_prefix_list: true
+          include_community_list: true
+        direction_out:
+          action: permit
+          include_community_list: true
     - name: test-link-bandwidth2
       link_bandwidth:
         enabled: true
@@ -208,6 +216,14 @@ router_bgp:
         all: true
       # Testing bfd false OUTSIDE a peer group that should NOT render
       bfd: false
+      missing_policy:
+        direction_in:
+          action: deny
+          include_prefix_list: true
+          include_community_list: true
+        direction_out:
+          action: permit
+          include_community_list: true
     - ip_address: 192.0.3.3
       remote_as: 65434
       send_community: standard
@@ -216,6 +232,12 @@ router_bgp:
         all: false
       # Test no config generation
       default_originate:
+      missing_policy:
+        direction_in:
+          action: deny
+          include_prefix_list: true
+          include_community_list: true
+          include_sub_route_map: true
     - ip_address: 192.0.3.4
       remote_as: 65435
       send_community: large
