--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -24,6 +24,9 @@ router_bgp:
       password: "q+VNViP5i4rVjW1cxFv2wA=="
       send_community: all
       maximum_routes: 0
+      missing_policy:
+        direction_out:
+          action: permit
       allowas_in:
         enabled: true
       shared_secret:
@@ -37,6 +40,9 @@ router_bgp:
       maximum_routes: 12000
       maximum_routes_warning_limit: 80 percent
       maximum_routes_warning_only: true
+      missing_policy:
+        direction_in:
+          action: deny
       send_community: all
       route_map_in: RM-MLAG-PEER-IN
       route_map_out: RM-MLAG-PEER-OUT
@@ -51,11 +57,17 @@ router_bgp:
         hash_algorithm: aes-128-cmac-96
     - ip_address: 192.168.255.2
       peer_group: EVPN-OVERLAY-PEERS
+      missing_policy:
+        direction_out:
+          action: deny-in-out
     - ip_address: 192.168.255.3
       allowas_in:
         enabled: true
         times: 5
       maximum_routes: 52000
+      missing_policy:
+        direction_in:
+          action: deny
       maximum_routes_warning_limit: 2000
       maximum_routes_warning_only: true
   redistribute_routes:
