--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10837,6 +10837,58 @@ keys:
               - int
             maximum_routes_warning_only:
               type: bool
+            missing_policy:
+              type: dict
+              description: Missing policy configuration for all address-families.
+              keys:
+                direction_in:
+                  description: Missing policy inbound direction.
+                  type: dict
+                  keys:
+                    action:
+                      description: Missing policy action.
+                      type: str
+                      required: true
+                      valid_values:
+                      - deny
+                      - permit
+                      - deny-in-out
+                    include_community_list:
+                      type: bool
+                      description: Include community-list references in missing policy
+                        decision.
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix-list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub-route-map references in missing policy
+                        decision.
+                direction_out:
+                  description: Missing policy outbound direction.
+                  type: dict
+                  keys:
+                    action:
+                      description: Missing policy action.
+                      type: str
+                      required: true
+                      valid_values:
+                      - deny
+                      - permit
+                      - deny-in-out
+                    include_community_list:
+                      type: bool
+                      description: Include community-list references in missing policy
+                        decision.
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix-list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub-route-map references in missing policy
+                        decision.
             link_bandwidth:
               type: dict
               keys:
@@ -11053,6 +11105,58 @@ keys:
               - int
             maximum_routes_warning_only:
               type: bool
+            missing_policy:
+              type: dict
+              description: Missing policy configuration for all address-families.
+              keys:
+                direction_in:
+                  description: Missing policy inbound direction.
+                  type: dict
+                  keys:
+                    action:
+                      description: Missing policy action.
+                      type: str
+                      required: true
+                      valid_values:
+                      - deny
+                      - permit
+                      - deny-in-out
+                    include_community_list:
+                      type: bool
+                      description: Include community-list references in missing policy
+                        decision.
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix-list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub-route-map references in missing policy
+                        decision.
+                direction_out:
+                  description: Missing policy outbound direction.
+                  type: dict
+                  keys:
+                    action:
+                      description: Missing policy action.
+                      type: str
+                      required: true
+                      valid_values:
+                      - deny
+                      - permit
+                      - deny-in-out
+                    include_community_list:
+                      type: bool
+                      description: Include community-list references in missing policy
+                        decision.
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix-list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub-route-map references in missing policy
+                        decision.
             allowas_in:
               type: dict
               keys:
