Feat(eos_cli_config_gen): Add support to configure PEG DR election algorithm

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -242,6 +242,8 @@ router_bgp:
       router_id: 192.168.255.3
       rd: "192.168.255.3:11"
       evpn_multicast: true
+      evpn_multicast_gateway_dr_election_algorithm:
+        preference: 10000
       default_route_exports:
         - address_family: evpn
       route_targets:
