issue-3247: fixed the DUPLICATE_VLANS_MLAG

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -125,7 +125,7 @@ all:
             core-interfaces-p2p-links-as:
 
           children:
-            duplicate-vlans-mlag:
+            DUPLICATE_VLANS_MLAG:
               hosts:
                 duplicate-vlans-mlag-a:
                 duplicate-vlans-mlag-b:
