Fix(eos_cli_config_gen): Fix the templates for event-handlers (#4055)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -34,8 +34,18 @@ event-handler trigger-on-counters
       granularity per-source
    action log
 !
+event-handler trigger-on-counters2
+   trigger on-counters
+      condition ( Arad*.IptCrcErrCnt.delta > 100 ) and ( Arad*.UcFifoFullDrop.delta > 100 )
+      granularity per-source
+!
+event-handler trigger-on-counters3
+   trigger on-counters
+!
 event-handler trigger-on-intf
    trigger on-intf Ethernet4 operstatus ip ip6
+!
+event-handler trigger-on-intf2
 !
 event-handler trigger-on-logging
    trigger on-logging
@@ -43,16 +53,27 @@ event-handler trigger-on-logging
       regex ab*
    action increment device-health metric Metric2
 !
+event-handler trigger-on-logging2
+   trigger on-logging
+      regex ab*
+!
+event-handler trigger-on-logging3
+   trigger on-logging
+!
 event-handler trigger-on-maintenance1
    trigger on-maintenance enter interface Management3 after stage linkdown
 !
 event-handler trigger-on-maintenance2
-   trigger on-maintenance enter unit unit1 before stage bgp
+   trigger on-maintenance exit unit unit1 before stage bgp
    action bash echo "on-maintenance"
 !
 event-handler trigger-on-maintenance3
    trigger on-maintenance enter bgp 10.0.0.2 vrf vrf1 all
    action bash echo "on-maintenance"
+!
+event-handler trigger-on-maintenance4
+!
+event-handler trigger-on-maintenance5
 !
 event-handler trigger-vm-tracer
    trigger vm-tracer vm
