--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -23,7 +23,7 @@ event_handlers:
   - name: trigger-on-maintenance2
     trigger: on-maintenance
     trigger_on_maintenance:
-      operation: enter
+      operation: exit
       unit: unit1
       action: before
       stage: bgp
@@ -38,6 +38,17 @@ event_handlers:
       action: all
     actions:
       bash_command: echo "on-maintenance"
+  - name: trigger-on-maintenance4
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      action: all
+  - name: trigger-on-maintenance5
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      action: before
+      bgp_peer: test
   - name: trigger-on-logging
     trigger: on-logging
     trigger_on_logging:
@@ -45,6 +56,12 @@ event_handlers:
       regex: "ab*"
     actions:
       increment_device_health_metric: Metric2
+  - name: trigger-on-logging2
+    trigger: on-logging
+    trigger_on_logging:
+      regex: "ab*"
+  - name: trigger-on-logging3
+    trigger: on-logging
   - name: trigger-on-counters
     trigger: on-counters
     trigger_on_counters:
@@ -53,6 +70,13 @@ event_handlers:
       granularity_per_source: true
     actions:
       log: true
+  - name: trigger-on-counters2
+    trigger: on-counters
+    trigger_on_counters:
+      condition: ( Arad*.IptCrcErrCnt.delta > 100 ) and ( Arad*.UcFifoFullDrop.delta > 100 )
+      granularity_per_source: true
+  - name: trigger-on-counters3
+    trigger: on-counters
   - name: trigger-on-intf
     trigger: on-intf
     trigger_on_intf:
@@ -60,6 +84,8 @@ event_handlers:
       ip: true
       ipv6: true
       operstatus: true
+  - name: trigger-on-intf2
+    trigger: on-intf
   - name: trigger-vm-tracer
     trigger: "vm-tracer vm"
     actions:
