Fix(eos_cli_config_gen): BGP models has supress-map which is not present in EOS commands. (#4054)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -751,9 +751,17 @@ keys:
             advertise_map:
               type: str
               description: Route-map name.
+              deprecation:
+                removed: true
+                warning: true
+                remove_in_version: v4.9.0
             supress_map:
               type: str
               description: Route-map name.
+              deprecation:
+                removed: true
+                warning: true
+                remove_in_version: v4.9.0
             summary_only:
               type: bool
             attribute_map:
@@ -2725,9 +2733,17 @@ keys:
                   advertise_map:
                     type: str
                     description: Route-map name.
+                    deprecation:
+                      removed: true
+                      warning: true
+                      remove_in_version: v4.9.0
                   supress_map:
                     type: str
                     description: Route-map name.
+                    deprecation:
+                      removed: true
+                      warning: true
+                      remove_in_version: v4.9.0
                   summary_only:
                     type: bool
                   attribute_map:
