--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11350,9 +11350,17 @@ keys:
             advertise_map:
               type: str
               description: Route-map name.
+              deprecation:
+                removed: true
+                warning: true
+                remove_in_version: v4.9.0
             supress_map:
               type: str
               description: Route-map name.
+              deprecation:
+                removed: true
+                warning: true
+                remove_in_version: v4.9.0
             summary_only:
               type: bool
             attribute_map:
@@ -13383,9 +13391,17 @@ keys:
                   advertise_map:
                     type: str
                     description: Route-map name.
+                    deprecation:
+                      removed: true
+                      warning: true
+                      remove_in_version: v4.9.0
                   supress_map:
                     type: str
                     description: Route-map name.
+                    deprecation:
+                      removed: true
+                      warning: true
+                      remove_in_version: v4.9.0
                   summary_only:
                     type: bool
                   attribute_map:
