--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/create.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/create.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure local folders
-  hosts: test-hosts
+  hosts: test_hosts
   gather_facts: false
   connection: local
   tasks:
