Feat(eos_designs): Add support to enable ISIS authentication at global level

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/core-1-isis-sr-ldp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/core-1-isis-sr-ldp.cfg
@@ -68,6 +68,8 @@ interface Ethernet2
    isis metric 60
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$mNvaIXPetcSA2UnFwIaxwA==
 !
 interface Ethernet3
    description P2P_LINK_TO_core-2-ospf-ldp_Ethernet3
@@ -156,6 +158,8 @@ interface Ethernet10
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$mNvaIXPetcSA2UnFwIaxwA==
 !
 interface Ethernet12
    description P2P_LINK_TO_core-2-ospf-ldp_Ethernet12
@@ -180,6 +184,8 @@ interface ethernet21
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$mNvaIXPetcSA2UnFwIaxwA==
 !
 interface ethernet22
    description P2P_LINK_TO_peer3_ethernet22
