--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
@@ -107,6 +107,8 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-1
+  isis_authentication_mode: md5
+  isis_authentication_key: $1c$mNvaIXPetcSA2UnFwIaxwA==
   mpls:
     ip: true
     ldp:
@@ -212,6 +214,8 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-2
+  isis_authentication_mode: md5
+  isis_authentication_key: $1c$mNvaIXPetcSA2UnFwIaxwA==
   mpls:
     ip: true
     ldp:
@@ -254,6 +258,8 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-2
+  isis_authentication_mode: md5
+  isis_authentication_key: $1c$mNvaIXPetcSA2UnFwIaxwA==
 - name: ethernet22
   peer: peer3
   peer_interface: ethernet22
