--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
@@ -15,29 +15,13 @@
   register: avd_requirements
 
 - name: Generate eos intended configuration and device documentation
-  debug:
-    msg: "{{ structured_dir }}/{{ inventory_hostname }}.{{ avd_structured_config_file_format }}"
-
-- name: Generate eos intended configuration and device documentation
-  debug:
-    msg: "{{ lookup('first_found', structured_config_filename, skip=True, errors='ignore') is arista.avd.defined }}"
-  vars:
-    structured_config_filename: "{{ structured_dir }}/{{ inventory_hostname }}.{{ avd_structured_config_file_format }}"
-
-- name: Generate eos intended configuration and device documentation
-  debug:
-    msg: "{{ structured_config is not arista.avd.defined and lookup('first_found', structured_config_filename, skip=True, errors='ignore') is arista.avd.defined }}"
-  vars:
-    structured_config_filename: "{{ structured_dir }}/{{ inventory_hostname }}.{{ avd_structured_config_file_format }}"
-
-- name: Generate eos intended configuration and device documentation
   # TODO this loses the capability to only generate documentation
   tags: [build, provision]
   arista.avd.eos_cli_config_gen:
     structured_config_filename: "{{ structured_config_filename }}"
     config_filename: "{{ eos_config_dir }}/{{ inventory_hostname }}.cfg"
     documentation_filename: "{{ devices_dir }}/{{ inventory_hostname }}.md"
-    read_structured_config_from_file: "{{ structured_config is not arista.avd.defined and lookup('first_found', structured_config_filename, skip=True, errors='ignore') is arista.avd.defined }}"
+    read_structured_config_from_file: "{{ structured_config is not arista.avd.defined and lookup('first_found', structured_config_filename, skip=True, errors='ignore') is not arista.avd.defined([]) }}"
     conversion_mode: "{{ avd_data_conversion_mode }}"
     validation_mode: "{{ avd_data_validation_mode }}"
     generate_device_doc: "{{ generate_device_documentation | arista.avd.default(true) and 'documentation' not in ansible_skip_tags }}"
