--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ipv6-neighbors.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ipv6-neighbors.yml
@@ -2,11 +2,12 @@ ipv6_neighbor:
   static_entries:
     - ipv6_address: 11:22:33:44:55:66:77:88
       interface: Ethernet1
-      mac_address: 11.22.33
+      mac_address: 11:22:33:44:55:66
       vrf: MGMT
     - ipv6_address: ::ffff:192.1.56.10
       interface: Loopback99
-      mac_address: aaaf.1234.bcbf
-  cache: True
-  persistent: True
-  refresh_delay: 1000
+      mac_address: aa:af:12:34:bc:bf
+  cache_persistent: true
+  persistent:
+    enabled: true
+    refresh_delay: 1000
