--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -5135,30 +5135,36 @@ keys:
             interface:
               type: str
               required: true
-              description: "Interface name.\nExample - Ethernet4\n          Loopback4-6\n
-                \         Port-channel4,7\n          Management 1\n          Tunnel10\n
-                \         Vlan101,102"
+              description: Interface name.
             mac_address:
               type: str
               required: true
-              description: 'Hardware address of neighbor.
-
-                Example - aaaf.1234.bcbf'
-              pattern: ^(?:[0-9A-Fa-f]{1,4}\.){2}[0-9A-Fa-f]{1,4}$
-      cache:
-        type: bool
-        description: Manage the IPv6 neighbor cache.
-      persistent:
+              description: MAC address of neighbor like 'aa:af:12:34:bc:bf'
+              pattern: ^([0-9a-f]{2}:){5}[0-9a-f]{2}$
+      cache_persistent:
         type: bool
         description: Restore the IPv6 neighbor cache after reboot.
-      refresh_delay:
-        type: int
-        description: Time to wait in seconds before refresh.
-        default: 600
-        min: 600
-        max: 3600
-        convert_types:
-        - str
+      persistent:
+        type: dict
+        keys:
+          enabled:
+            type: bool
+            description: Restore the IPv6 neighbor cache after reboot with default
+              refresh delay.
+            required: true
+          refresh_delay:
+            type: int
+            description: 'Time to wait in seconds before refreshing the IPv6 neighbor
+              cache after reboot.
+
+              It wil require to set the value of `enabled` key as true.
+
+              '
+            min: 600
+            max: 3600
+            default: 600
+            convert_types:
+            - str
   ipv6_prefix_lists:
     type: list
     primary_key: name
