issue-4041: fix the interface var in template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ipv6-neighbors.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ipv6-neighbors.cfg
@@ -14,5 +14,7 @@ interface Management1
 !
 ipv6 neighbor cache persistent
 ipv6 neighbor persistent refresh-delay 1000
+ipv6 neighbor vrf MGMT 11:22:33:44:55:66:77:88 Ethernet1 11:22:33:44:55:66
+ipv6 neighbor ::ffff:192.1.56.10 Loopback99 aa:af:12:34:bc:bf
 !
 end
