update arp persistent data model as per discussion with Claus

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/arp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/arp.yml
@@ -1,7 +1,8 @@
 # test arp
 arp:
-  cache_persistent: true
-  persistent_refresh_delay: 700
+  persistent: 
+    enabled: true
+    refresh_delay: 700
   aging:
     timeout_default: 300
   static_entries:
