issue-4041: updated the description

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -5155,14 +5155,13 @@ keys:
           refresh_delay:
             type: int
             description: 'Time to wait in seconds before refreshing the IPv6 neighbor
-              cache after reboot.
+              cache after reboot (EOS default 600).
 
-              It wil require to set the value of `enabled` key as true.
+              It requires `enabled` to be true.
 
               '
             min: 600
             max: 3600
-            default: 600
             convert_types:
             - str
   ipv6_prefix_lists:
