--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -229,6 +229,10 @@ jobs:
         run: |
           echo "PY_COLORS=1" >> $GITHUB_ENV
           echo "ANSIBLE_FORCE_COLOR=1" >> $GITHUB_ENV
+      - name: 'Set Ansible verbosity when debug logs are enabled'
+        run: |
+          echo "ANSIBLE_VERBOSITY=4"
+        if: runner.debug == "1"
       - uses: actions/checkout@v4
       - name: Build minimum requirements
         run: |
@@ -241,7 +245,7 @@ jobs:
         with:
           molecule_parentdir: 'ansible_collections/arista/avd'
           molecule_command: 'test'
-          molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
+          molecule_args: --scenario-name ${{ matrix.avd_scenario }}
           pip_file: ${{ matrix.pip_requirements }}
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
