--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -60,6 +60,7 @@ jobs:
               - 'ansible_collections/arista/avd/requirements.txt'
               - 'ansible_collections/arista/avd/requirements-dev.txt'
               - 'ansible_collections/arista/avd/meta/runtime.yml'
+              - '.github/requirements-ci.txt'
               - '.github/workflows/pull-request-management.yml'
             docs:
               - '.github/workflows/pull-request-management.yml'
