--- a/.github/requirements-ci.txt
+++ b/.github/requirements-ci.txt
@@ -1,4 +1,4 @@
-# Installing PyAVD as editable install.
+# Installing PyAVD from source.
 # The package path below is relative to the repo root and will only work if the pip install is executed from there.
 ./python-avd
 # The -r path is relative to this file.
