--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/arp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/arp.schema.yml
@@ -15,7 +15,7 @@ keys:
           enabled:
             type: bool
             required: true
-            description: Restore the ARP cache after reboot
+            description: Restore the ARP cache after reboot.
           refresh_delay:
             type: int
             description: Time to wait in seconds before refreshing the ARP cache after reboot (EOS default 600).
