--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -397,12 +397,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: |
-            3.10
-            3.11
             3.12
       - name: 'Install Python requirements'
         run: |
-          pip install -r .github/requirements-ci.txt
+          pip install ansible-core<2.18.0 -r .github/requirements-ci.txt --upgrade
       - name: 'Run ansible-test integration test cases'
         run: |
           cd ansible_collections/arista/avd/
