Feat(eos_cli_config_gen): Adding option for arp cache persistent and arp persistent refresh-delay (#4109)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/arp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/arp.cfg
@@ -12,6 +12,7 @@ interface Management1
    vrf MGMT
    ip address 10.73.255.122/24
 !
+arp persistent refresh-delay 700
 arp aging timeout default 300
 arp vrf BLAH 42.42.42.42 DEAD.BEEF.CAFE arpa
 arp vrf defauls 42.42.42.42 DEAD.BEEF.CAFE arpa
