Fix(eos_designs): Sanitize interface names in ACLs

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ipv4-acls.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ipv4-acls.cfg
@@ -45,6 +45,22 @@ interface Ethernet4
    ip access-group TEST-IPV4-ACL-WITH-NO-FIELDS-IN in
    ip access-group TEST-IPV4-ACL-WITH-NO-FIELDS-OUT out
 !
+interface Ethernet5/1
+   no shutdown
+   no switchport
+   ip address 172.20.20.0/31
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet5_1 in
+!
+interface Ethernet6/6
+   no shutdown
+   no switchport
+!
+interface Ethernet6/6.6
+   no shutdown
+   encapsulation dot1q vlan 6
+   ip address 172.21.21.0/31
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet6_6.6 out
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -58,6 +74,10 @@ ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet2
    15 deny ip any host 172.17.17.17
    permit ip host 172.17.17.1 host 172.17.17.17
 !
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet5_1
+   15 deny ip any host 172.20.20.0
+   permit ip 172.20.20.1/30 host 172.20.20.0
+!
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet1
    remark Some remark will not require source and destination fields.
    permit ip host 172.16.0.2 any
@@ -65,6 +85,10 @@ ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet1
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet2
    remark Some remark will not require source and destination fields.
    permit ip host 172.17.17.17 any
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet6_6.6
+   remark Some remark will not require source and destination fields.
+   permit ip host 172.21.21.0 any
 !
 ip access-list TEST-IPV4-ACL-WITH-NO-FIELDS-IN
    permit ip host 172.18.18.18 any
