--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ipv4-acls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ipv4-acls.yml
@@ -84,6 +84,23 @@ ethernet_interfaces:
   type: routed
   access_group_in: TEST-IPV4-ACL-WITH-NO-FIELDS-IN
   access_group_out: TEST-IPV4-ACL-WITH-NO-FIELDS-OUT
+- name: Ethernet5/1
+  peer_type: l3_interface
+  ip_address: 172.20.20.0/31
+  shutdown: false
+  type: routed
+  access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet5_1
+- name: Ethernet6/6.6
+  peer_type: l3_interface
+  ip_address: 172.21.21.0/31
+  shutdown: false
+  type: l3dot1q
+  access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet6_6.6
+  encapsulation_dot1q_vlan: 6
+- name: Ethernet6/6
+  type: routed
+  peer_type: l3_interface
+  shutdown: false
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
@@ -124,6 +141,17 @@ ip_access_lists:
     protocol: ip
     source: 172.17.17.1
     destination: 172.17.17.17
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet5_1
+  entries:
+  - sequence: 15
+    action: deny
+    protocol: ip
+    source: any
+    destination: 172.20.20.0
+  - action: permit
+    protocol: ip
+    source: 172.20.20.1/30
+    destination: 172.20.20.0
 - name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet1
   entries:
   - remark: Some remark will not require source and destination fields.
@@ -137,6 +165,13 @@ ip_access_lists:
   - action: permit
     protocol: ip
     source: 172.17.17.17
+    destination: any
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet6_6.6
+  entries:
+  - remark: Some remark will not require source and destination fields.
+  - action: permit
+    protocol: ip
+    source: 172.21.21.0
     destination: any
 - name: TEST-IPV4-ACL-WITH-NO-FIELDS-IN
   entries:
