--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -5,57 +5,57 @@ all:
       # Each case _must_ be in it's own 'fabric' group set as 'fabric_name' in the hostvars
       # Each case must be added to converge.yml as a separate play - otherwise the eos_designs_facts fabric_name check will fail.
       children:
-        fabric_missing_mlag_peer:
+        FABRIC_MISSING_MLAG_PEER:
           hosts:
             missing-mlag-peer:
-        fabric_ip_addressing_mlag_odd_id:
+        FABRIC_IP_ADDRESSING_MLAG_ODD_ID:
           hosts:
             mlag_odd_id_oddodd1:
             mlag_odd_id_oddodd2:
-        fabric_ip_addressing_mlag_same_subnet:
+        FABRIC_IP_ADDRESSING_MLAG_SAME_SUBNET:
           hosts:
             mlag_same_subnet_1:
             mlag_same_subnet_2:
-        fabric_invalid_schema:
+        FABRIC_INVALID_SCHEMA:
           hosts:
             invalid-schema:
-        fabric_invalid_schema_connected_endpoints:
+        FABRIC_INVALID_SCHEMA_CONNECTED_ENDPOINTS:
           hosts:
             invalid-schema-connected-endpoints:
-        fabric_removed_schema_connected_endpoints:
+        FABRIC_REMOVED_SCHEMA_CONNECTED_ENDPOINTS:
           hosts:
             removed-schema-connected-endpoints:
-        fabric_invalid_uplink_port_channel_id_1:
+        FABRIC_INVALID_UPLINK_PORT_CHANNEL_ID_1:
           hosts:
             invalid-uplink-port-channel-id-l3leaf-1:
             invalid-uplink-port-channel-id-l3leaf-2:
             invalid-uplink-port-channel-id-l2leaf-1:
             invalid-uplink-port-channel-id-l2leaf-2:
-        fabric_invalid_uplink_port_channel_id_2:
+        FABRIC_INVALID_UPLINK_PORT_CHANNEL_ID_2:
         # Notice the same hosts since all vars are given in group var
           hosts:
             invalid-uplink-port-channel-id-l3leaf-1:
             invalid-uplink-port-channel-id-l3leaf-2:
             invalid-uplink-port-channel-id-l2leaf-1:
             invalid-uplink-port-channel-id-l2leaf-2:
-        fabric_invalid_uplink_port_channel_id_3:
+        FABRIC_INVALID_UPLINK_PORT_CHANNEL_ID_3:
         # Notice the same hosts since all vars are given in group var
           hosts:
             invalid-uplink-port-channel-id-l3leaf-1:
             invalid-uplink-port-channel-id-l3leaf-2:
             invalid-uplink-port-channel-id-l2leaf-1:
             invalid-uplink-port-channel-id-l2leaf-2:
-        fabric_wan_role_overlay_routing_protocol:
+        FABRIC_WAN_ROLE_OVERLAY_ROUTING_PROTOCOL:
           hosts:
             invalid-wan-role-overlay-routing-protocol:
-        fabric_p2p_vrfs:
+        FABRIC_P2P_VRFS:
           hosts:
             invalid-uplink-type-p2p-vrfs-underlay-router-false:
-        fabric_downlink_pools_missing:
+        FABRIC_DOWNLINK_POOLS_MISSING:
           hosts:
             downlink-pools-missing-spine:
             downlink-pools-missing-l3leaf:
-        fabric_downlink_pools_duplicate:
+        FABRIC_DOWNLINK_POOLS_DUPLICATE:
           hosts:
             downlink-pools-duplicate-spine:
             downlink-pools-duplicate-l3leaf:
@@ -125,7 +125,7 @@ all:
             core-interfaces-p2p-links-as:
 
           children:
-            duplicate-vlans-mlag:
+            DUPLICATE_VLANS_MLAG:
               hosts:
                 duplicate-vlans-mlag-a:
                 duplicate-vlans-mlag-b:
@@ -134,7 +134,7 @@ all:
           # These hosts are included in the vars and facts, but will not be included in the structured config run,
           # since they are not present to trigger a failure on a different device.
           children:
-            duplicate-ip-address-router-bgp:
+            DUPLICATE_IP_ADDRESS_ROUTER_BGP:
               hosts:
                 duplicate-ip-address-1:
                 duplicate-ip-address-2:
