--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -60,6 +60,7 @@ jobs:
               - 'ansible_collections/arista/avd/requirements.txt'
               - 'ansible_collections/arista/avd/requirements-dev.txt'
               - 'ansible_collections/arista/avd/meta/runtime.yml'
+              - '.github/requirements-ci.txt'
               - '.github/workflows/pull-request-management.yml'
             docs:
               - '.github/workflows/pull-request-management.yml'
@@ -322,7 +323,7 @@ jobs:
           molecule_command: 'test'
           molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
           # Temporarily using special requirements to install anta while the feature is in preview.
-          pip_file: ansible_collections/arista/avd/roles/eos_validate_state/preview_requirements.txt
+          pip_file: .github/requirements-ci-anta.txt
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
           check_git: true
@@ -392,12 +393,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: |
-            3.10
-            3.11
             3.12
       - name: 'Install Python requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements-dev.txt -r ansible_collections/arista/avd/requirements.txt --upgrade
+          pip install "ansible-core<2.18.0" -r .github/requirements-ci.txt --upgrade
       - name: 'Run ansible-test integration test cases'
         run: |
           cd ansible_collections/arista/avd/
