--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_negative_unit_tests/inventory/host_vars/router-bfd-dangerous-interval-not-set.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_negative_unit_tests/inventory/host_vars/router-bfd-dangerous-interval-not-set.yml
@@ -3,4 +3,4 @@
 router_bfd:
   session_snapshot_interval: 3
 
-expected_error_message: "router_bfd.session_snapshot_interval_dangerous was expected but not set!"
+expected_error_message: "Error during plugin execution: router_bfd.session_snapshot_interval_dangerous was expected but not set!"
