--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_negative_unit_tests/inventory/host_vars/router-bfd-dangerous-interval-false.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_negative_unit_tests/inventory/host_vars/router-bfd-dangerous-interval-false.yml
@@ -4,4 +4,4 @@ router_bfd:
   session_snapshot_interval: 6
   session_snapshot_interval_dangerous: false
 
-expected_error_message: "router_bfd.session_snapshot_interval_dangerous was set to False but we expected True!"
+expected_error_message: "Error during plugin execution: router_bfd.session_snapshot_interval_dangerous was set to False but we expected True!"
