--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -7,6 +7,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
   cancel-in-progress: true
 
+env:
+  # Set -vvv is ACTIONS_STEP_DEBUG is set
+  # Apparently it is set in secrets when running with debug
+  ANSIBLE_VERBOSITY: ${{ secrets.ACTIONS_STEP_DEBUG && 3 || 0 }}
+
 jobs:
   file-changes:
     runs-on: ubuntu-latest
