--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -227,7 +227,7 @@ router_bgp:
       router_id: 192.168.255.3
       rd: "192.168.255.3:11"
       evpn_multicast: true
-      default_route_export:
+      default_route_exports:
         - address_family: evpn
       route_targets:
         import:
@@ -252,7 +252,7 @@ router_bgp:
     - name: TENANT_A_PROJECT02
       router_id: 192.168.255.3
       rd: "192.168.255.3:12"
-      default_route_export:
+      default_route_exports:
         - address_family: evpn
           always: true
       route_targets:
@@ -283,7 +283,7 @@ router_bgp:
       evpn_multicast_address_family:
         ipv4:
           transit: true
-      default_route_export:
+      default_route_exports:
         - address_family: evpn
           route_map: TENANT_A_PROJECT03_RM_DEFAULT
       route_targets:
@@ -302,7 +302,7 @@ router_bgp:
       evpn_multicast_address_family:
         ipv4:
           transit: false
-      default_route_export:
+      default_route_exports:
         - address_family: evpn
           rcf: TENANT_A_PROJECT03_RCF_DEFAULT()
       route_targets:
