Feat(eos_cli_config_gen): Add support for permit response traffic nat under ip acls

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/acl.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/acl.cfg
@@ -27,6 +27,7 @@ ip access-list ACL-02
    10 remark ACL to restrict access RFC1918 addresses
    20 permit ip 10.0.0.0/8 any
    30 permit ip 192.0.2.0/24 any
+   permit response traffic nat
 !
 ip access-list ACL-03
    10 remark ACL to restrict access RFC1918 addresses
