--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/acl.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/acl.yml
@@ -10,6 +10,7 @@ access_lists:
         action: "permit ip 192.0.2.0/24 any"
   - name: ACL-02
     counters_per_entry: true
+    permit_response_traffic: nat
     sequence_numbers:
       - sequence: 10
         action: "remark ACL to restrict access RFC1918 addresses"
