--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/access_lists.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/access_lists.schema.yml
@@ -21,6 +21,13 @@ keys:
           convert_types: [ int ]
         counters_per_entry:
           type: bool
+        permit_response_traffic:
+          type: str
+          valid_values:
+            - nat
+          description: |-
+            NAT based reflexive ACL.
+            Minimum EOS version requirement 4.32.2F.
         sequence_numbers:
           type: list
           required: true
